--- a/client/src/css/promo.css
+++ b/client/src/css/promo.css
@@ -10,6 +10,7 @@
   border-bottom: 2px solid #4a9400; /* green line */
   background-color: #fff;
   flex-wrap: wrap;
+  font-weight: 700;
 }
 
 .menu-section {
